--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "gh-pages -d build"
+    "predeploy": "ng build --prod --base-href=/Property-Hub/",
+    "deploy": "gh-pages -d dist/your-project-name -r https://github.com/Coder-Within-Me/Property-Hub.git"
   },
   "private": true,
   "dependencies": {
